# kino

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  release-please-config.json
backend/: .rustfmt.toml  Cargo.toml  about.hbs  about.toml  clippy.toml  deny.toml  justfile  openapi.json  rust-toolchain.toml
backend/.cargo/: config.toml
backend/.config/: nextest.toml
backend/crates/kino/: CHANGELOG.md  Cargo.toml  build.rs
backend/crates/kino/debian/: firewalld-kino.xml  kino-tray.desktop  kino.desktop  postinst  postrm  service
backend/crates/kino/msix/: README.md  appxmanifest.xml
backend/crates/kino/rpm/: kino.service  postinstall.sh  postuninstall.sh
backend/crates/kino/src/: auth.rs  clock.rs  db.rs  error.rs  images.rs  init.rs  main.rs  mdns.rs  pagination.rs  paths.rs  service_runner.rs  spa.rs  startup.rs  state.rs  tests.rs  time.rs  windows_packaging.rs
backend/crates/kino/src/acquisition/: blocklist.rs  grab.rs  mod.rs  policy.rs  release.rs  release_target.rs
backend/crates/kino/src/acquisition/search/: episode.rs  mod.rs  movie.rs  wanted_sweep.rs
backend/crates/kino/src/api/: diagnostics.rs  fs.rs  health.rs  mod.rs  network.rs  status.rs
backend/crates/kino/src/auth_session/: handlers.rs  mod.rs  model.rs
backend/crates/kino/src/backup/: archive.rs  handlers.rs  mod.rs  model.rs  schedule.rs
backend/crates/kino/src/cast_sender/: device.rs  discovery.rs  handlers.rs  mod.rs  session.rs
backend/crates/kino/src/cleanup/: executor.rs  mod.rs  tracker.rs
backend/crates/kino/src/content/: derived_state.rs  mod.rs
backend/crates/kino/src/content/media/: handlers.rs  mod.rs  model.rs
backend/crates/kino/src/content/movie/: handlers.rs  mod.rs  model.rs
backend/crates/kino/src/content/show/: episode.rs  episode_handlers.rs  handlers.rs  mod.rs  model.rs  series.rs
backend/crates/kino/src/conventions/: mod.rs  sql_timestamp_compare.rs
backend/crates/kino/src/download/: handlers.rs  manager.rs  mod.rs  model.rs  monitor.rs  phase.rs  session.rs  torrent_client.rs
backend/crates/kino/src/download/vpn/: handlers.rs  health.rs  killswitch.rs  leak_check.rs  mod.rs  port_forward.rs  tunnel.rs
backend/crates/kino/src/events/: display.rs  listeners.rs  mod.rs
backend/crates/kino/src/flow_tests/: blocklist_api.rs  calendar_ics.rs  calendar_movie.rs  calendar_with_content.rs  cast_token.rs  client_logs.rs  config_api.rs  continue_watching.rs  delete_movie_cascade.rs  delete_show.rs  download_actions.rs  download_extra_actions.rs  download_files.rs  downloads_api.rs  edge_cases.rs  episode_watched.rs  follow_conflicts.rs  follow_movie.rs  follow_show.rs  fs_browse.rs  fs_browse_dir.rs  fs_browse_extra.rs  grab_to_import.rs  history_api.rs  history_episode_filter.rs  history_filters.rs  indexer_actions.rs  indexer_crud.rs  integrations_status.rs  library_search.rs  library_search_extras.rs  library_views.rs  lists_actions.rs  lists_api.rs  logo_api.rs  logs_api.rs  logs_export.rs  logs_source_filter.rs  media_api.rs  metadata_test_api.rs  (+29 more)
backend/crates/kino/src/home/: handlers.rs  mod.rs  preferences.rs
backend/crates/kino/src/import/: archive.rs  ffprobe.rs  mod.rs  naming.rs  pack.rs  pipeline.rs  single.rs  tests.rs  transfer.rs  trigger.rs
backend/crates/kino/src/indexers/: cloudflare.rs  definition.rs  downloader.rs  filters.rs  handlers.rs  health.rs  loader.rs  mod.rs  model.rs  parser.rs  refresh.rs  request.rs  template.rs
backend/crates/kino/src/indexers/cf_assets/: fonts_win.json  init_inject.js  init_manifest.json  solver.js
backend/crates/kino/src/indexers/test_fixtures/: README.md  synthetic-magnet-tracker.yml  synthetic-tracker.yml
backend/crates/kino/src/integrations/: mod.rs  opensubtitles.rs
backend/crates/kino/src/integrations/lists/: handlers.rs  mdblist.rs  mod.rs  model.rs  parser.rs  sync.rs  tmdb_list.rs  trakt_list.rs
backend/crates/kino/src/integrations/trakt/: auth.rs  client.rs  (+7 more)
backend/crates/kino/src/invariants/: active_download_has_torrent.rs  blocklist_hashes_normalized.rs  imported_has_media.rs  media_has_owner.rs  mod.rs  show_has_seasons.rs  stuck_partial_follow.rs
backend/crates/kino/src/metadata/: image_handlers.rs  logos.rs  mod.rs  refresh.rs  test_handlers.rs  tmdb_handlers.rs
backend/crates/kino/src/models/: enums.rs  mod.rs
backend/crates/kino/src/notification/: history.rs  mod.rs  webhook.rs  webhook_retry.rs  websocket.rs  ws_handlers.rs
backend/crates/kino/src/observability/: handlers.rs  layer.rs  log_retention.rs  mod.rs  redact.rs  trace.rs  writer.rs
backend/crates/kino/src/parser/: mod.rs  tests.rs  tokens.rs
backend/crates/kino/src/playback/: cast.rs  cast_token.rs  chapter_model.rs  decision.rs  downmix.rs  ffmpeg_bundle.rs  file_pick.rs  handlers.rs  hw_probe.rs  hw_probe_cache.rs  hwa_error.rs  intro_skipper.rs  mod.rs  probe_handlers.rs  profile.rs  progress.rs  source.rs  stream.rs  stream_model.rs  stream_probe.rs  subtitle.rs  transcode.rs  transcode_reason.rs  transcode_state.rs  trickplay.rs  trickplay_gen.rs  trickplay_stream.rs  watch_state.rs
backend/crates/kino/src/reconcile/: mod.rs
backend/crates/kino/src/scheduler/: handlers.rs  mod.rs  model.rs
backend/crates/kino/src/service_install/: linux.rs  macos.rs  mod.rs  windows.rs
backend/crates/kino/src/settings/: config.rs  mod.rs  quality_profile.rs
backend/crates/kino/src/test_support/: fake_torrent.rs  mock_tmdb.rs  mock_torznab.rs  mock_trakt.rs  mod.rs
backend/crates/kino/src/tmdb/: client.rs  mod.rs  types.rs
backend/crates/kino/src/torznab/: caps.rs  client.rs  mod.rs  parse.rs
backend/crates/kino/src/tray/: install.rs  lock.rs  mod.rs  run.rs  stub.rs
backend/crates/kino/src/watch_now/: handlers.rs  mod.rs  phase.rs
backend/crates/kino/wix/: main.wxs
backend/migrations/: 20260328000001_initial_schema.sql
(+324 files in other folders)
