[package]
name = "kino"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[[bin]]
name = "kino"
path = "src/main.rs"

[features]
default = ["tray"]
# Exposes `kino::test_support` to crate-external integration tests in
# `tests/`. Enabled automatically under `cfg(test)` for in-module
# tests; enable explicitly when an integration test binary needs to
# reach harness primitives that aren't part of the production API.
# Named "harness" rather than "test_support" / "test" so it doesn't
# trigger clippy's redundant-feature-name lint (which would push us
# toward shadowing the `test` cfg).
harness = []
# Compiles in subsystem 22 (desktop tray) — the `kino tray`,
# `kino install-tray`, and `kino uninstall-tray` subcommands. Headless
# builds (Pi appliance image, Docker) opt out with
# `--no-default-features` to drop the GUI deps (libgtk-3 +
# libayatana-appindicator + libxdo on Linux). `notify-rust` and
# `auto-launch` join the dep list when tasks #516 and the autostart
# follow-up land.
# `webbrowser` is non-optional — the server uses it for the
# auto-open-on-first-run UX (see main.rs::maybe_open_browser).
# `tray-icon` and `tao` only matter when shipping the GUI tray.
tray = ["dep:tray-icon", "dep:tao"]

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
regex.workspace = true
bytes.workspace = true
futures.workspace = true
urlencoding.workspace = true
image.workspace = true
hex.workspace = true
deunicode.workspace = true
sha2.workspace = true
jsonwebtoken.workspace = true
quick-xml.workspace = true
scraper.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
librqbit.workspace = true
boringtun.workspace = true
mdns-sd.workspace = true
if-addrs.workspace = true
rust_cast.workspace = true
crossbeam-channel.workspace = true
tar.workspace = true
flate2.workspace = true
fs4.workspace = true
etcetera.workspace = true
# Tray deps — only pulled in when the `tray` feature is on (default
# for desktop builds; off for headless / Pi / Docker). See
# docs/roadmap/22-desktop-tray.md.
tray-icon = { workspace = true, optional = true }
tao = { workspace = true, optional = true }
# Cross-platform "open URL in default browser". Used by the tray's
# "Open Kino in browser" menu item AND by the server's auto-open-on-
# first-run UX, so it's a base dep, not feature-gated.
webbrowser.workspace = true
# tempfile is also useful in tests (was dev-only before subsystem 19);
# kept in [dependencies] so the backup archive writer can stage
# vacuumed snapshots and restore-uploads without doing the dance
# itself.
tempfile.workspace = true
tokio-util.workspace = true
playwright-rs.workspace = true
tokio-tungstenite.workspace = true
wreq.workspace = true
wreq-util.workspace = true
veilus-fingerprint.workspace = true
blurhash = "0.2.3"
zip = "8.5.1"
sevenz-rust2 = "0.20.2"
async-trait = "0.1.89"
tun = { version = "0.8.7", features = ["async"] }
rusty-chromaprint = "0.2"
usvg = "0.47.0"
parking_lot = "0.12.5"
subtle = "2.6.1"
hmac = "0.12"
rand = "0.9"

# Safe wrapper around `kill(pid, signal)` for the producer-
# throttle path in `playback::transcode`. The workspace
# forbids raw `unsafe`, so we use nix's typed `kill(Pid,
# Signal)` instead of libc directly. Unix-only — the
# equivalent on Windows (`NtSuspendProcess`) lives in a
# separate tracker item.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

# Windows-only: SCM (Service Control Manager) integration. Used by
# `service_install/windows.rs` to register / start / stop the
# `kino` Windows service, and by `main.rs` to dispatch
# `SERVICE_CONTROL_STOP` into a graceful shutdown when the binary
# is invoked under SCM. Cross-OS clippy compiles this code on
# Windows runners but the Linux devcontainer can't exercise it at
# runtime — see docs/architecture/service-install.md.
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
# Tray autostart entry — `kino install-tray` writes
# HKCU\Software\Microsoft\Windows\CurrentVersion\Run\KinoTray. Same
# Windows-only dep posture as windows-service above.
winreg = "0.55"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
wiremock = "0.6"

[lints]
workspace = true

# ─────────────────────────────────────────────────────────────────────
# Native-package metadata (subsystem 21). cargo-deb and
# cargo-generate-rpm read these; cargo-dist consumes them via the
# linux-packages job in `.github/workflows/release.yml`.
# ─────────────────────────────────────────────────────────────────────
[package.metadata.deb]
maintainer = "kinostack-app contributors <noreply@kinostack.app>"
copyright = "2026, kinostack-app contributors. GPL-3.0-or-later."
# Paths resolve relative to this package's Cargo.toml dir
# (`backend/crates/kino/`) — cargo-deb 3.x changed from
# workspace-relative to package-relative resolution. So
# `../../../LICENSE` reaches the repo-root file at `<repo>/LICENSE`.
license-file = ["../../../LICENSE", "0"]
extended-description = """
Single-binary self-hosted media automation and streaming server.
Discovers, acquires, organises, transcodes, streams, and casts your
media library from one Rust binary.
"""
section = "video"
priority = "optional"
# Static dep list — `$auto` would have cargo-deb run dpkg-shlibdeps
# against the binary, but on cross-arch builds (e.g. aarch64 .deb
# built on an x86_64 runner) the target's system libs aren't
# installed, so detection fails. Explicit list mirrors the
# transitive shlib-deps the kino binary needs:
#   - libxdo3                     — tray-icon dep
#   - libgtk-3-0                  — tray feature (transitively pulls
#                                   libgdk-3, libgdk-pixbuf-2.0,
#                                   libcairo, libglib-2.0,
#                                   libgobject-2.0, libgio-2.0)
#   - libayatana-appindicator3-1  — tray indicator
#   - libc6, libgcc-s1            — runtime essentials
#   - ffmpeg                      — runtime invocation (transcode)
# `avahi-daemon` + `avahi-utils` go in `recommends` (not `depends`)
# so `apt install --no-install-recommends ./kino_*.deb` on a headless
# server doesn't force-pull a desktop daemon. Default `apt install`
# brings them in. avahi-daemon is the system mDNS responder; the
# `avahi-publish` CLI (in avahi-utils) is what kino spawns to
# advertise `kino.local` on the LAN. Without these, kino still
# starts and serves over its IP — only mDNS .local discovery is
# unavailable, with the Settings UI surfacing remediation.
depends = "ffmpeg, libgtk-3-0, libayatana-appindicator3-1, libxdo3, libc6, libgcc-s1"
recommends = "iproute2, avahi-daemon, avahi-utils"
assets = [
    ["target/release/kino", "usr/bin/", "755"],
    ["../../../LICENSE", "usr/share/doc/kino/", "644"],
    ["../../../NOTICE", "usr/share/doc/kino/", "644"],
    ["../../../README.md", "usr/share/doc/kino/", "644"],
    ["debian/kino.desktop", "usr/share/applications/", "644"],
    # XDG autostart entry — every desktop session launches `kino tray`
    # which polls /api/v1/status and shows a status-coloured icon
    # in the tray / top bar. Headless boxes silently ignore this
    # (no $DISPLAY → tray binary fails → autostart spec says
    # "drop"). Per-user disable via the desktop's autostart UI.
    ["debian/kino-tray.desktop", "etc/xdg/autostart/", "644"],
    # XDG icon theme — `Icon=kino` in the .desktop files resolves
    # against `/usr/share/icons/hicolor/<size>/apps/kino.png`. We
    # ship the standard hicolor sizes so the icon scales cleanly
    # across the launcher / app menu / dock at every desktop's
    # preferred resolution. Master at packaging/icons/linux/.
    ["../../../packaging/icons/linux/kino-16.png", "usr/share/icons/hicolor/16x16/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-22.png", "usr/share/icons/hicolor/22x22/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-24.png", "usr/share/icons/hicolor/24x24/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-32.png", "usr/share/icons/hicolor/32x32/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-48.png", "usr/share/icons/hicolor/48x48/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-64.png", "usr/share/icons/hicolor/64x64/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-128.png", "usr/share/icons/hicolor/128x128/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-256.png", "usr/share/icons/hicolor/256x256/apps/kino.png", "644"],
    ["../../../packaging/icons/linux/kino-512.png", "usr/share/icons/hicolor/512x512/apps/kino.png", "644"],
    # firewalld service definition. Discoverable via
    # `firewall-cmd --get-services` after install — does NOT enable
    # itself (Debian / Fedora policy: don't mutate firewall on
    # install). Lets users / the wizard's copy-paste banner run
    # `sudo firewall-cmd --permanent --add-service=kino && firewall-cmd --reload`
    # instead of remembering the port numbers.
    ["debian/firewalld-kino.xml", "usr/lib/firewalld/services/kino.xml", "644"],
]
maintainer-scripts = "debian/"
# `start = true` means cargo-deb's auto-generated postinst snippet
# calls `deb-systemd-invoke start kino` after install, so users get
# the setup wizard at http://localhost without a manual
# `systemctl start kino`. Matches Jellyfin / Sonarr / Plex / nginx /
# postgres / every other server-style package convention. Our
# hand-written postinst (`maintainer-scripts = "debian/"`) runs
# BEFORE this hook fires, so the kino user + /var/lib/kino dirs
# already exist by the time start is called.
systemd-units = { unit-name = "kino", enable = true, start = true }

[package.metadata.generate-rpm]
license = "GPL-3.0-or-later"
summary = "Single-binary media automation and streaming server"
# Same dep posture as the .deb — shell-out to ffmpeg, GTK linked.
# avahi/avahi-tools provide the system mDNS responder + CLI kino
# uses for `kino.local` publishing. cargo-generate-rpm doesn't
# distinguish Requires vs Recommends, so these are full Requires
# here; a headless RPM install can manually `dnf erase avahi`
# afterwards if it really doesn't want them.
requires = { ffmpeg = "*", "gtk3" = "*", "libayatana-appindicator-gtk3" = "*", "avahi" = "*", "avahi-tools" = "*" }
assets = [
    { source = "target/release/kino", dest = "/usr/bin/kino", mode = "755" },
    { source = "../../../LICENSE", dest = "/usr/share/doc/kino/LICENSE", mode = "644", doc = true },
    { source = "../../../NOTICE", dest = "/usr/share/doc/kino/NOTICE", mode = "644", doc = true },
    { source = "../../../README.md", dest = "/usr/share/doc/kino/README.md", mode = "644", doc = true },
    { source = "rpm/kino.service", dest = "/usr/lib/systemd/system/kino.service", mode = "644" },
    { source = "debian/kino.desktop", dest = "/usr/share/applications/kino.desktop", mode = "644" },
    { source = "debian/kino-tray.desktop", dest = "/etc/xdg/autostart/kino-tray.desktop", mode = "644" },
    # hicolor icons — same as the .deb side. RPM uses the same
    # /usr/share/icons/hicolor tree on Fedora / RHEL / openSUSE.
    { source = "../../../packaging/icons/linux/kino-16.png", dest = "/usr/share/icons/hicolor/16x16/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-22.png", dest = "/usr/share/icons/hicolor/22x22/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-24.png", dest = "/usr/share/icons/hicolor/24x24/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-48.png", dest = "/usr/share/icons/hicolor/48x48/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-128.png", dest = "/usr/share/icons/hicolor/128x128/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/kino.png", mode = "644" },
    { source = "../../../packaging/icons/linux/kino-512.png", dest = "/usr/share/icons/hicolor/512x512/apps/kino.png", mode = "644" },
    # firewalld service file — discoverable on Fedora / RHEL but
    # not auto-enabled. Same Jellyfin pattern.
    { source = "debian/firewalld-kino.xml", dest = "/usr/lib/firewalld/services/kino.xml", mode = "644" },
]
post_install_script = "rpm/postinstall.sh"
post_uninstall_script = "rpm/postuninstall.sh"

# WiX MSI installer metadata — cargo-dist's `msi` installer needs
# stable GUIDs to identify the product family across versions
# (`upgrade-guid`) and the install-path component (`path-guid`).
# DO NOT regenerate these on subsequent releases — Windows uses them
# to detect "this is an upgrade of the existing kino install" vs
# "this is a fresh install" and a re-rolled GUID would orphan
# previous versions on users' machines.
[package.metadata.wix]
upgrade-guid = "DFC0934A-26D5-4537-9BF6-199983094B83"
path-guid = "D1E4AB18-FC59-466A-8376-C7A4CAF9FA1B"
license = false
eula = false
# Per-product .ico shown in Add/Remove Programs and the MSI shield.
# Multi-resolution (16/24/32/48/64/128/256).
#
# cargo-wix templates this string verbatim into the wxs as
# `<Icon SourceFile='{product-icon}'/>` (no path canonicalization),
# and WiX `light.exe` resolves SourceFile relative to the wxs file's
# directory (`backend/crates/kino/wix/`). So the icon must live next
# to main.wxs and the path must be the bare basename — `../` traversal
# can't reach the repo-root master at `packaging/icons/windows/`
# from `wix/` at all (manifest is two levels under the workspace
# root, wxs is three). Idiomatic for cargo-dist users (nushell,
# cargo-near, unavi all do the same).
#
# Master is at `packaging/icons/windows/kino.ico`; the copy here is
# refreshed when the master regenerates from the 512px brand mark.
product-icon = "wix\\kino.ico"
